mywork/force-app/main/default/objects/Deployment__c/fields/Build__c.field-meta.xml
<CustomField>
    <fullName>Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The latest build for this deployment</description>
    <inlineHelpText>The latest build for this deployment</inlineHelpText>
    <label>Build</label>
    <referenceTo>Build__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>