mywork/force-app/main/default/objects/Deployment__c/fields/Completed_Build__c.field-meta.xml
<CustomField>
    <fullName>Completed_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed Build</label>
    <referenceTo>Build__c</referenceTo>
    <relationshipLabel>Deployments (Completed Build)</relationshipLabel>
    <relationshipName>Deployments1</relationshipName>
    <type>Lookup</type>
</CustomField>