mywork/force-app/main/default/objects/Deployment__c/fields/Deployment_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Attempt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Attempt</label>
    <referenceTo>Deployment_Attempt__c</referenceTo>
    <relationshipLabel>Deployments</relationshipLabel>
    <relationshipName>Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>