mywork/force-app/main/default/objects/Deployment__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Deployments (Target)</relationshipLabel>
    <relationshipName>Deployments_Target</relationshipName>
    <type>Lookup</type>
</CustomField>